--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-matplotlib = "^3.10.0"
+python = ">=3.9"
+matplotlib = ">=3.4.3"
+numpy = "^2.2.1"
 
 
 [build-system]
