--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ numpy = "^2.2.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^6.2.5"
 pytest-cov = "^6.0.0"
+sphinx-autoapi = "^3.4.0"
+sphinx-rtd-theme = "^3.0.2"
+myst-nb = "^1.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
