--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pycounts_jd25"
 version = "0.1.0"
-description = "A package for doing great things!"
-authors = ["Monty Python"]
+description = "Calculate word counts in a text file and plot word counts"
+authors = ["Julian Daduica"]
 license = "MIT"
 readme = "README.md"
 
