--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Use Codecov to track coverage
         uses: codecov/codecov-action@v5
         with:
-          token: {{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml   # coverage report
 
       - name: Build documentation
