--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-cov = "^6.0.0"
 sphinx-autoapi = "^3.4.0"
 sphinx-rtd-theme = "^3.0.2"
 myst-nb = "^1.1.2"
+jupyter = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
